tests/snapshots/examples_fixtures/primop__all_primops.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/all_primops.flx
== compile ==
failed (compile)
== diagnostics ==
error[E406]: Unhandled Root Effect

`fn main` has undischarged effects: Div.

  examples/primop/all_primops.flx:95:1
   |
95 | fn main() with IO, Time, Div {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------- undischarged effects at root boundary

Hint:
  Handle these effects explicitly with `... handle Effect { ... }` before returning from `main`.
== stdout ==
<not executed>
